Client-Side Update

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -13,8 +13,11 @@ SecurityCraft
 Sophisticated Backpacks
 Sophisticated Core
 Torchmaster
-Calemi's Economy
 Alex's Mobs
 Mining World
 TheWildBackport
 Upgrade Aquatic
+CoFH Core
+Gems & Jewels
+The Twilight Forest
+Thermal Series
