--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -15,3 +15,6 @@ justenoughprofessions:professions
 securitycraft:securitycraft_to_vanilla
 securitycraft:vanilla_to_securitycraft
 tombstone:combine
+thermal:rock_gen
+thermal:tree_extractor
+twilightforest:uncrafting
