Client Configs Finalized

--- a/config/tombstone-client.toml
+++ b/config/tombstone-client.toml
@@ -10,7 +10,7 @@
 	#Skips the Respawn Screen [false/true|default:false]
 	skip_respawn_screen = false
 	#Shows shadow step particles [false/true|default:true]
-	show_shadow_step = false
+	show_shadow_step = true
 	#Shows shield particles on villager [false/true|default:true]
 	show_shield_particle = true
 	#Allows the ghost to appear around you during Halloween [false/true|default:true]
@@ -20,9 +20,9 @@
 	#Display or not the messages of gain of points in knowledge of death [false/true|default:true]
 	display_knowledge_message = true
 	#Equips elytra in priority when recovering your lost items [false/true|default:false]
-	equip_elytra_in_priority = false
+	equip_elytra_in_priority = true
 	#Automatically equip magic books in Curios slot [false/true|default:false]
-	equip_curio_slot_magic_book = false
+	equip_curio_slot_magic_book = true
 	#Shows the use of the Tombstone's enchantments in tooltip [false/true|default:true]
 	show_info_on_enchantment = true
 	#Favor the tools on the hotbar when recovering a grave [false/true|default:false]
@@ -35,16 +35,16 @@
 	allow_grave_in_water = true
 	#Decimal value for the color of the particles when using magic items [0..16777215|default:125656]
 	#Range: 0 ~ 16777215
-	particle_casting_color = 14937088
+	particle_casting_color = 8546534
 	#Decimal value for the color of the grave text <Death Date> [0..16777215|default:2962496]
 	#Range: 0 ~ 16777215
-	text_color_death_date = 2962496
+	text_color_death_date = 16777215
 	#Decimal value for the color of the grave text <R.I.P.> [0..16777215|default:2962496]
 	#Range: 0 ~ 16777215
-	text_color_rip = 2962496
+	text_color_rip = 16777215
 	#Decimal value for the color of the grave text <Owner Name> [0..16777215|default:5991302]
 	#Range: 0 ~ 16777215
-	text_color_owner = 5991302
+	text_color_owner = 7221913
 	#Decimal value of the fog color [0..16777215|default:125656]
 	#Range: 0 ~ 16777215
 	fog_color = 16777215
@@ -56,7 +56,7 @@
 	fog_period = "NIGHT"
 	#Favorite grave
 	#Allowed Values: GRAVE_SIMPLE, GRAVE_NORMAL, GRAVE_CROSS, TOMBSTONE, SUBARAKI_GRAVE, GRAVE_ORIGINAL
-	favorite_grave = "GRAVE_SIMPLE"
+	favorite_grave = "SUBARAKI_GRAVE"
 	#Favorite grave marble
 	#Allowed Values: DARK, WHITE
 	favorite_grave_marble = "DARK"
@@ -65,13 +65,13 @@
 	grave_skin_rule = "DEFAULT"
 	#Defines your grave placement logic (nearest or ideal placement) [SAFEST/NORMAL/NEAREST|default:NORMAL]
 	#Allowed Values: SAFEST, NORMAL, NEAREST
-	grave_spawn_rule = "NORMAL"
+	grave_spawn_rule = "SAFEST"
 	#Defines when to automatically equip your items [NEVER/GRAVE_RECOVERY/DEATH_RESPAWN/ALWAYS|default:ALWAYS]
 	#Allowed Values: NEVER, GRAVE_RECOVERY, DEATH_RESPAWN, ALWAYS
 	auto_equip_rule = "ALWAYS"
 	#Defines the type of marker when holding in hand some items like the Grave's Key [WING/SPARK/NOTE/BOX|default:WING]
 	#Allowed Values: WING, SPARK, NOTE, BOX
-	marker_type = "WING"
+	marker_type = "NOTE"
 	#Defines the font to use in Tombstone's screens (only for english, french and spanish languages) [FANTASY/VANILLA|default:FANTASY]
 	#Allowed Values: FANTASY, VANILLA
 	font_rule = "FANTASY"
